# 2026_Form-of-notes

./: Cargo.toml  README.md  build.rs
src/: app_state.rs  calendar_controller.rs  main.rs  notes_controller.rs  task_controller.rs  test.rs
src/models/: app-state.rs  calendar-controller.rs  task-controller.rs
ui/: calendar.slint  commons.slint  folder-picker.slint  main.slint  notes.slint  palette.slint  tasks.slint
