[package]
name = "projekat"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.16.1"
icalendar = { version = "0.14", features = ["parser"]}
chrono = "0.4"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.1", features = ["v4"] }
tempfile = "3"

[build-dependencies]
slint-build = "1.16"

[dev-dependencies]
tempfile = "3.27.0"
