[package]
name = "form_of_notes"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = {version = "1.16.1", features = ["serde"]}
icalendar = { version = "0.14", features = ["parser"]}
chrono = "0.4"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
tempfile = "3"
file_picker = "0.4.1"

[build-dependencies]
slint-build = "1.16"

[dev-dependencies]
tempfile = "3.27.0"
